frontend/stylesheets/homepage.css
.light {
    --primary-color-homepage: white;
    --secondary-color-homepage: #3A3A3A;
}

.dark {
    --primary-color-homepage: #3A3A3A;
    --secondary-color-homepage: white;
}

.primary-bg-color-homepage {
    background-color: var(--primary-color-homepage);
}

.primary-color-homepage {
    color: var(--primary-color-homepage);
}

.secondary-bg-color-homepage {
    background-color: var(--secondary-color-homepage);
}

.secondary-color-homepage {
    color: var(--secondary-color-homepage);
}

main {
    margin: 4rem 4rem 20rem 4rem;
    padding: 0rem 2rem 0rem 2rem;
}

main {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
}

main .heading1 {
    font-weight: 800;
    font-size: 3rem;
}

main .heading2 {
    font-weight: 800;
    font-size: 2rem;
}

main .heading3 {
    font-weight: 200;
    font-size: 1.6rem;
}

.middle-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 4rem;
    margin-top: 4rem;
}

.heading-div {
    display: flex;
    justify-content: space-between;
    margin: 0rem 2rem 0rem 2rem;
}

/* Search Bar */
.search-container {
    border-style: solid;
    border-color: black;
    border-radius: 2rem;
    border-width: 0.1rem;
    box-shadow: black;

    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 3rem;
    padding: 0rem 1rem 0rem 1rem;
    background-color: #F0F0F0;
    width: 14rem;

}

.search-container-div input {
    border-style: none;
    background-color: transparent;
    width: 100%;
    font-size: medium;
    outline: none;
}

.search-container-div {
    height: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 0.5rem;
}

.search-container-div img {
    cursor: pointer;
    height: 100%;
    align-self: center;
}

.search-results {
    position: absolute;
    width: 13rem;
    background-color: var(--user-menu-color);
    padding: 0.5rem 1rem 0.5rem 2rem;
    border-radius: 1.5rem;
    box-shadow: 0 0.5rem 1rem var(--box-shadow-nav-bar);

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-self:first baseline;
    margin-top: 4rem;
}

.search-results>div {
    display: flex;
    justify-content: left;

    color: var(--user-menu-text-color-nav-bar);
    font-family: "Cantarell";
    font-size: 1.3rem;
    cursor: pointer;
}

.search-results>div:hover {
    transform: scale(1.05);
}

/* Search Bar ends */

/* Boxes CSS */
.boxes {
    margin-top: 2rem;
    margin-bottom: 4rem;
    width: 100%;
    height: 27rem;

    border: 1rem solid pink;
    border-radius: 2rem;

    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.boxes div {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;

    height: 100%;
    width: 13rem;

    cursor: pointer;
}

.boxes img {
    width: 100%;
    height: 19.5rem;

    border-radius: 1rem;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);

    cursor: pointer;
}

.boxes span {
    font-size: 1.5rem;
}

/* Josheen & Liri - button */
.boxes button {
    border-radius: 50%;
    width: 2.5rem;
    height: 2.5rem;

    align-self: center;
}

.poster-personalise-page {
  margin-top: 10rem;
}

.banner {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: url('../images/banner-bg.jpg') no-repeat;
  background-position: center;
  background-size: cover;
  border-radius: 2rem;
  padding: 2.5rem;
  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
  max-width: 65%;
  margin: 0 auto;
  position: relative;
  overflow: visible;
  height: 20rem;
}

.bg-blur {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: url('../images/banner-bg.jpg') no-repeat;
  background-position: center;
  background-size: cover;
  filter: blur(0.2rem);
  z-index: 0;
  border-radius: 2rem;
}

.text-content {
  margin-top: 2rem;
}

.text-content h1 {
  font-size: 3.5rem;
  font-family: 'Caudex', serif;
  color: #ffffff;
}

.highlight-images {
    font-family: sans-serif;
    color: #fec7e8;
}

